/* request_get_preset_status.proto/Open GoPro, Version 2.0 (C) Copyright 2021 GoPro, Inc. (http://gopro.com/OpenGoPro). */
/* This copyright was auto-generated on Wed Sep 11 20:31:30 UTC 2024 */

/***********************************************************************************************************************
 *
 * This file is automatically generated!!! Do not modify manually.
 *
 **********************************************************************************************************************/

/**
 * Defines the structure of protobuf messages for obtaining preset status
 */

syntax = "proto2";
package open_gopro;

enum EnumRegisterPresetStatus {
    REGISTER_PRESET_STATUS_PRESET             = 1; // Send notification when properties of a preset change
    REGISTER_PRESET_STATUS_PRESET_GROUP_ARRAY = 2; // Send notification when properties of a preset group change
}

/**
 * Get the set of currently available presets and optionally register to be notified when it changes.
 *
 * Response: @ref NotifyPresetStatus sent immediately
 *
 * Notification: @ref NotifyPresetStatus sent periodically as preset status changes, if registered.
 *
 * The preset status changes when:
 *
 * - A client changes one of a preset's captioned settings via the API
 * - The user exits from a preset's settings UI on the camera (e.g. long-press the preset pill and then press the back arrow)
 * - The user creates/deletes/reorders a preset within a group
 */
message RequestGetPresetStatus {
    repeated EnumRegisterPresetStatus register_preset_status   = 1; // Array of Preset statuses to be notified about
    repeated EnumRegisterPresetStatus unregister_preset_status = 2; // Array of Preset statuses to stop being notified about
}
